<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="horizontal|vertical" >
   
 <include 
            android:id="@+id/title_bar"  
            layout="@layout/title_bar" />  
            

            
    <LinearLayout
        android:id="@+id/my_user_head"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical">
        
     <EditText
            android:id="@+id/account"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:inputType="phone"
            android:hint="@string/account_hint"
            android:layout_margin="2dp"
             android:background="@drawable/register_phone_bg"/>

      <EditText 
            android:id="@+id/password"
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:inputType="textPassword"
            android:hint="@string/password_hint" 
             android:background="@drawable/register_phone_bg"         
            android:layout_margin="2dp"/>
     </LinearLayout>

     <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/my_user_head"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"      
         android:background="@drawable/login_btn"
        android:text="@string/login"
        android:textColor="@color/white" />

	 <TextView
	     android:id="@+id/forgot_pwd"
	     android:layout_width="wrap_content"
	     android:layout_height="30dp"
	     
	     android:layout_alignLeft="@+id/login"
	     android:layout_below="@+id/login"
	     android:layout_marginTop="60dp"
	     android:padding="5dp"
	     android:text="忘记密码？"
	     android:textColor="#7B7B7B"
	     
	     android:scrollbars="vertical" />
  
      <Button
          android:id="@+id/register"
          android:layout_width="100dp"
          android:layout_height="30dp"
          android:layout_below="@+id/login"
          android:layout_alignRight="@+id/login" 
         android:layout_marginTop="50dp"
          android:text="@string/register"
          android:textColor="@color/white"
           android:background="@drawable/login_btn"
          android:textSize="16sp" />

    </RelativeLayout>

