<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
   >
    
     <include layout="@layout/title_bar" />
    
     <LinearLayout
                android:id="@+id/linearlayout_user_1"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="50dp"
                android:orientation="vertical"
                android:background="@drawable/blue"
                
                >
      <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    
                     android:layout_margin="10dp" >
            <Button
                        android:id="@+id/login_register"
                        android:layout_width="80dp"
                        android:layout_height="30dp" 
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp" 
                        
                        android:text="@string/login_register" 
                        android:background="@drawable/information_login_register"  
                         android:textColor="#FFFFFF"/>
              
                    <Button
                        android:id="@+id/to_information"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:drawableRight="@drawable/turn_right" 
                        android:gravity="center"
                        android:onClick="onClick"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                       
                         android:background="#0000"
                        android:text="账号管理"
                        android:textColor="#ffffff"
                        android:textSize="14dp"
                        android:visibility="visible"/>
                     <TextView 
                        android:id="@+id/login_number"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"   
                        android:layout_centerVertical="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="20dp"
                        android:layout_toLeftOf="@id/to_information"
                        android:text=""  
                        android:textColor="#ffffff"
                        android:textSize="20dp"/>
                    
                   
         </RelativeLayout>
     </LinearLayout>
    <LinearLayout
                android:id="@+id/linearlayout_user_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearlayout_user_1"
                android:layout_margin="10dp"
                android:background="@drawable/user_information_bg_1"
                android:orientation="vertical" >
 
                    
                  
      <RelativeLayout
                    android:id="@+id/relativelayout_user_money"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/textbox"
                    android:clickable="true" >

                    <ImageView
                        android:id="@+id/qianbao"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/money_bag" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/qianbao"
                        android:text="@string/money" />

                    <TextView 
                        android:id="@+id/money_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" 
                        android:layout_centerVertical="true"
                        
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="40dp"                        
                        android:text="20.00元"
                        android:textColor="#6C6C6C"  
                        android:textSize="15dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/turn_right" />
                   </RelativeLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/devide_line" />
                <RelativeLayout
                    android:id="@+id/relativelayout_user_parking_ticket"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/textbox" 
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/parking_ticket"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/pack_quan" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/parking_ticket"
                        android:text="@string/parkQ" />
                   <TextView 
                        android:id="@+id/ticket_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" 
                        android:layout_centerVertical="true"
                         android:layout_alignParentRight="true"
                        android:layout_marginRight="40dp"                           
                        android:text="0张"  
                        android:textColor="#6C6C6C"
                        android:textSize="15dp"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/turn_right" />
                   </RelativeLayout>
       
               
     </LinearLayout>
     <LinearLayout
                android:id="@+id/linearlayout_user_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearlayout_user_2"
                android:layout_margin="10dp"
                android:background="@drawable/user_information_bg_1"
                android:orientation="vertical" >
           
      <RelativeLayout
                    android:id="@+id/relativelayout_user_record"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/textbox"
                    android:clickable="true" >

                    <ImageView
                        android:id="@+id/record_pic"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/pack_record" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/record_pic"
                        android:text="停车记录" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/turn_right" />
                   </RelativeLayout>
                <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/devide_line" />
                <RelativeLayout
                    android:id="@+id/relativelayout_user_find_illegal"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/textbox" 
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/illegal"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/chaweizhang" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/illegal"
                         android:text="@string/checkW"  />
                       

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/turn_right" />
                   </RelativeLayout>
       
                 <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/devide_line" />
                <RelativeLayout
                    android:id="@+id/relativelayout_user_setting"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/textbox"
                    android:clickable="true" >

                    <ImageView
                        android:id="@+id/user_setting"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/setting" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/user_setting"
                        android:text="@string/set" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/turn_right" />
                   </RelativeLayout>
                   
                <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/devide_line" />
                <RelativeLayout
                    android:id="@+id/relativelayout_user_find_back"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/textbox" 
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/find_back"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/yijian" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/find_back"
                        android:text="@string/feedback" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/turn_right" />
                   </RelativeLayout>
                   <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/devide_line" />
                <RelativeLayout
                    android:id="@+id/relativelayout_user_about_as_our"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/textbox" 
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/about_as_our"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:src="@drawable/setting" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/about_as_our"
                        android:text="@string/about" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/turn_right" />
                   </RelativeLayout>
</LinearLayout>
</RelativeLayout>